<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.0</version> <!-- use latest stable -->
		<relativePath/>
	</parent>

	<groupId>com.delma</groupId>
	<artifactId>delma</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Delma Backend Microservices</name>
	<description>Parent POM for Delma Backend Microservices</description>
	<!-- 🔥 THIS IS REQUIRED FOR MULTI-MODULE PROJECTS -->
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2025.1.0</spring-cloud.version>
        <!-- ADDED: single source of truth for Lombok version -->
        <lombok.version>1.18.38</lombok.version>
	</properties>

	<modules>

        <module>common-lib</module>
		<module>doctorservice</module>
		<module>gateway</module>
		<module>userservice</module>
		<module>appointmentservice</module>
		<module>productservice</module>
		<module>categoryservice</module>
		<module>paymentservice</module>
		<module>documentservice</module>
		<module>notificationservice</module>
        <module>patientservice</module>
        <module>orderservice</module>


	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <!-- FIX: Lombok annotation processor defined once here,
                         so children don't need to repeat it -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
